<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="25dp"
    tools:context=".Fragments.DetailFrag">


    <RelativeLayout
        android:id="@+id/weatherForcastContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/addressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvcity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_country"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/weatherHourly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingTop="18dp"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="10sp" />


                <TextView
                    android:id="@+id/tvHour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="11sp" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/temperatureContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawableLeft="@drawable/ic_arrow_back"
                android:paddingStart="32dp"
                android:paddingLeft="32dp" />

            <TextView
                android:id="@+id/weatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/_29_c"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="70sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp_05_05_am"
                    android:textColor="@color/design_default_color_on_primary" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp_05_05_pm"
                    android:textColor="@color/design_default_color_on_primary" />
            </LinearLayout>


        </LinearLayout>


        <!--   testing other weather info!!!!!     -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/wind"
                    android:tint="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06:40 AM"
                    android:textSize="14dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/pressure"
                    android:tint="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pressure"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 kpa"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/humidity"
                    android:tint="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="06:40 AM"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

        <!--   end test!!!     -->


    </RelativeLayout>

    <ProgressBar android:id="@+id/loader1" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText1" android:layout_width="wrap_content"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:visibility="gone" android:text="@string/something_went_wrong"/>

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:drawableStart="@drawable/ic_arrow_back"
        android:drawableLeft="@drawable/ic_arrow_back"
        android:visibility="gone"
        android:paddingStart="32dp"
        android:paddingLeft="32dp" />

</RelativeLayout>


<!--    <TextView-->
<!--        android:id="@+id/tvDescription"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:text="TextView"-->
<!--        android:textColor="@android:color/black"-->
<!--        android:textSize="18sp" />-->